# psbg-t

./: .env_template  .gitignore  README.md  customed_block_func_map.py  docs_path.py  document_processor.py  eval_retrieval.py  file_parsers.py  main.py  prompts.py  pyproject.toml  rag_pipleline.py  test.py  test_rag_pipeline.py  utils.py
data/NBBU/Asus/200JB --- 單port單輸出電壓/: ADP200JB SERIES-ES04.doc  ADP200JB SERIES-ES04.docx
data/NBBU/Asus/240EB --- 單port單輸出電壓/: ADP240EB BXX SERIES-ES05.doc  ADP240EB BXX SERIES-ES05.docx
data/NBBU/Asus/65DW Y2E --- 單port單輸出電壓/: ADP65DW X2X-ES07.doc  ADP65DW X2X-ES07.docx  ADP65DW X2X-TS07.doc
data/NBBU/Asus/65JW Y2A --- 單port多輸出電壓 (Type-C)/: ADP65JW X2X SERIES-ES06.doc  ADP65JW X2X SERIES-ES06.docx  ADP65JW X2X SERIES-TS11.doc
data/NBBU/Asus/65ZW BNA --- 單port多輸出電壓 (type-c)/: ADP65ZW SERIES-ESS06.doc  ADP65ZW SERIES-ESS06.docx
data/NBBU/DELL/130DB --- 單port單輸出電壓/: ADP130DB D SERIES-ES14.doc  ADP130DB D SERIES-ES14.docx  SPECADPTAC130WEELC3PLOT6 WW A01 (003).xlsx
data/NBBU/DELL/130GB BA --- 單port多輸出電壓 (type-c)/: ADP130GB B SERIES-ES09.doc  ADP130GB B SERIES-ES09.docx  RFQ_EE spec_Coco Beach 130W TYPE-C_X00_11222022.xlsx
data/NBBU/HP/100BH/: ADP100BH-SERIES-ES06.docx
data/spec_reference_doc/: DOE&CoC tier2.xls
retrieval_dataset/ADP100BH-SERIES-ES06/L25298-C/: document.json  query.json
retrieval_dataset/ADP65ZW SERIES-ESS06/ASUS PD 3.0 65W 62368 SPEC REV 02_2019_9/: document.json  query.json
retrieval_dataset/ADP65ZW SERIES-ESS06/ASUS PD 3.0 65W Low Cost New ID SPEC REV 04_2023_09/: document.json  query.json
(+23 files in other folders)
